dataset1235/2025-2/1379599236/users/2549797095/executions/2277843042_2667036473.log
== SUBMISSION (2025-08-20 18:54:53)
-- CODE: 
Celsius = float(input("Digite a temperatura: "))
Kelvin = print(round(Celsius+273.15, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:39:00)
-- CODE: 
Celsius = input("Digite um número: )
Kelvin = print(Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:35:47)
-- CODE: 
Celsius = input("Digite um número: ")
Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:45:34)
-- CODE: 
celsius = float(input("Digite a temperatura em graus celsius: ")
kelvin = round(celsius + 273.15, 2)
print(kelvin)

                
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:35:46)
-- CODE: 
Celsius = input("Digite um número: ")
Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:38:20)
-- CODE: 
Celsius = input("Digite um número: )
Kelvin = print(round(x,2)Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:39:39)
-- CODE: 
Celsius = float(input("Digite um número: )
Kelvin = print(Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:45:33)
-- CODE: 
celsius = float(input("Digite a temperatura em graus celsius: ")
kelvin = round(celsius + 273.15, 2)
print(kelvin)

                
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:35:46)
-- CODE: 
Celsius = input("Digite um número: ")
Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:36:04)
-- CODE: 
Celsius = input("Digite um número: ")
Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:39:02)
-- CODE: 
Celsius = input("Digite um número: )
Kelvin = print(Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:34:19)
-- CODE: 
Celsius = input("Digite um número: ")
Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:35:44)
-- CODE: 
Celsius = input("Digite um número: ")
Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin = print(float("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:39:38)
-- CODE: 
Celsius = float(input("Digite um número: )
Kelvin = print(Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:39:39)
-- CODE: 
Celsius = float(input("Digite um número: )
Kelvin = print(Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = float(input("Digite um número: )
                          ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:45:35)
-- CODE: 
celsius = float(input("Digite a temperatura em graus celsius: ")
kelvin = round(celsius + 273.15, 2)
print(kelvin)

                
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    celsius = float(input("Digite a temperatura em graus celsius: ")
                   ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 18:38:17)
-- CODE: 
Celsius = input("Digite um número: )
Kelvin = print(round(x,2)Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:36:05)
-- CODE: 
Celsius = input("Digite um número: ")
Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:36:04)
-- CODE: 
Celsius = input("Digite um número: ")
Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:38:19)
-- CODE: 
Celsius = input("Digite um número: )
Kelvin = print(round(x,2)Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:34:18)
-- CODE: 
Celsius = input("Digite um número: ")
Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:39:00)
-- CODE: 
Celsius = input("Digite um número: )
Kelvin = print(Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:38:18)
-- CODE: 
Celsius = input("Digite um número: )
Kelvin = print(round(x,2)Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:54:51)
-- CODE: 
Celsius = float(input("Digite a temperatura: "))
Kelvin = print(round(Celsius+273.15, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:49:38)
-- CODE: 
Celsius = input("Digite a temperatura: ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:39:01)
-- CODE: 
Celsius = input("Digite um número: )
Kelvin = print(Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:35:13)
-- CODE: 
Celsius = input("Digite um número: ")
Kelvin = print("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = print("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                                                                          ~~~~~~~^~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = print("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                                                                          ~~~~~~~^~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = print("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                                                                          ~~~~~~~^~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = print("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                                                                          ~~~~~~~^~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = print("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                                                                          ~~~~~~~^~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = print("Usando a formula K = C + 273.15. O resultado será: ", Celsius+273.15)
                                                                          ~~~~~~~^~~~~~~
TypeError: can only concatenate str (not "float") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:38:20)
-- CODE: 
Celsius = input("Digite um número: )
Kelvin = print(round(x,2)Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:38:31)
-- CODE: 
Celsius = input("Digite um número: )
Kelvin = print(round(x,2), Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:49:42)
-- CODE: 
Celsius = input("Digite a temperatura: ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite a temperatura:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite a temperatura:
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite a temperatura:
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite a temperatura:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite a temperatura:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite a temperatura:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:38:32)
-- CODE: 
Celsius = input("Digite um número: )
Kelvin = print(round(x,2), Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:33:45)
-- CODE: 
Celsius = input("Digite um número: ")
Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273,15)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273,15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273,15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273,15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273,15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273,15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 2
    Kelvin = print(round(x,2)"Usando a formula K = C + 273.15. O resultado será: ", Celsius+273,15)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 18:50:59)
-- CODE: 
Celsius = input("Digite a temperatura: ")
Kelvin = float(round(Celsius+273.15, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = float(round(Celsius+273.15, 2))
                         ~~~~~~~^~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = float(round(Celsius+273.15, 2))
                         ~~~~~~~^~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = float(round(Celsius+273.15, 2))
                         ~~~~~~~^~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = float(round(Celsius+273.15, 2))
                         ~~~~~~~^~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = float(round(Celsius+273.15, 2))
                         ~~~~~~~^~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = float(round(Celsius+273.15, 2))
                         ~~~~~~~^~~~~~~
TypeError: can only concatenate str (not "float") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 18:38:15)
-- CODE: 
Celsius = input("Digite um número: )
Kelvin = print(round(x,2)Celsius+273.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = input("Digite um número: )
                    ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
